gcc/testsuite/g++.dg/pph/d1chained.cc
#include "c1chained1.h"
#include "c1chained2.h"
// { dg-error "Preprocessor state inconsistent for PPH" "" { xfail *-*-* } }
int x = TWO;
